--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ urllib3==2.5.0
 Werkzeug==3.1.3
 opencv-python-headless==4.9.0.80
 numpy==1.26.4
+gfpgan==1.3.8
+facexlib==0.3.0
+torch==2.3.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
